<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:background="@color/ui_white">

        <TextView
            android:id="@+id/text_view_information_title"
            style="@style/Text2.Large.Bold"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ui_white"
            android:drawableBottom="@drawable/ic_error"
            android:gravity="center"
            android:text="@string/product_main_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/button_information_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Reintentar"
            android:layout_marginTop="24dp"
            android:padding="4dp"
            android:textColor="@color/ui_white"
            android:background="@drawable/shp_bg_list_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_information_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>