...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:transitionGroup="true">

                <TextView
                    android:id="@+id/product_detail_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    style="@style/Text2.Medium.Bold"
                    android:paddingStart="16dp"
                    tools:text="Lorem ipsum" />
...
